--- a/.antora/modules/specification/nav_openmaterial.adoc
+++ b/.antora/modules/specification/nav_openmaterial.adoc
@@ -10,4 +10,4 @@
 ** xref:geometry/general-structure-index.adoc[]
 * Material
 ** xref:material/general-structure-index.adoc[]
-
+* xref:test-hierarchie.adoc[]
