--- a/content/index.adoc
+++ b/content/index.adoc
@@ -23,6 +23,7 @@ In alteration to the regular https://www.asam.net/license[license terms], ASAM a
 
 :antora_mapping: true
 ifndef::use-antora-rules[]
+toc::[]
 
 [preface]
 include::general_docs/foreword.adoc[leveloffset=+1]
